<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/home_nav_graph"
        android:title="@string/home_menu_title_text"
        android:icon="@drawable/ic_home"/>

    <item android:id="@+id/post_nav_graph"
        android:title="@string/post_menu_title_text"
        android:icon="@drawable/ic_post" />

    <item android:id="@+id/group_nav_graph"
        android:title="@string/study_group_menu_title_text"
        android:icon="@drawable/ic_group" />

    <item android:id="@+id/memorize_nav_graph"
        android:title="@string/memorize_menu_title_text"
        android:icon="@drawable/ic_memorize" />

    <item android:id="@+id/profile_nav_graph"
        android:title="@string/profile_menu_title_text"
        android:icon="@drawable/ic_profile" />
</menu>